# Kerberos

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
content/: index.md
content/attacks/: index.md  tools.md
content/attacks/credential-theft/: index.md  pass-the-key.md  pass-the-ticket.md  password-spraying.md  user-enumeration.md
content/attacks/delegation/: delegation-attacks.md  index.md  s4u2self-abuse.md  spn-jacking.md
content/attacks/forgery/: diamond-ticket.md  golden-ticket.md  index.md  sapphire-ticket.md  silver-ticket.md
content/attacks/roasting/: asrep-roasting.md  asreq-roasting.md  index.md  kerberoasting.md
content/javascripts/: etype-calculator.js  event-decoder.js
content/protocol/: active-directory.md  ap-exchange.md  as-exchange.md  cross-realm.md  delegation.md  encryption.md  index.md  overview.md  preauth.md  principals.md  s4u.md  tgs-exchange.md  tickets.md
content/security/: account-key-audit.md  aes-standardization.md  algorithms.md  etype-calculator.md  etype-decision-guide.md  etype-negotiation.md  event-decoder.md  group-policy.md  index.md  mitigations.md  msds-supported.md  quick-start.md  rc4-deprecation.md  registry-audit.md  registry.md  troubleshooting.md
content/stylesheets/: extra.css
docs/: april-2026-findings.md  lab-findings.md  matrix-findings.md
includes/: abbreviations.md  old-passwords-query.md  set-aes-dmsa.md  set-aes-gmsa.md  set-aes-msa.md  set-aes-user-accounts.md  spn-account-types.md  spn-overview-query.md  verify-kerberos-auditing.md
overrides/: main.html
