[project]
name = "kerberos-guide"
version = "0.1.0"
description = "Comprehensive guide to Kerberos authentication in Microsoft Windows Active Directory."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "StrongWind1" },
]
keywords = [
    "active-directory",
    "aes",
    "kerberos",
    "kerberoasting",
    "rc4",
    "security",
    "windows",
]

[dependency-groups]
docs = [
    "mkdocs-material>=9.0",
]
